--- a/rettvu2024/public/index.html
+++ b/rettvu2024/public/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FKTCN.png?alt=media&token=fbd85bf5-6668-4f7c-b97f-19c6cd41ef19" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/5c4aca786f.js" crossorigin="anonymous"></script>
-    <title>RET 2024</title>
+    <title>RET TVU</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
