--- a/rettvu2024/public/index.html
+++ b/rettvu2024/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FKTCN.png?alt=media&token=fbd85bf5-6668-4f7c-b97f-19c6cd41ef19" />
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
