--- a/rettvu2024/public/index.html
+++ b/rettvu2024/public/index.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon"
+    href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon"
+    href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
+
+  <link rel="manifest"
+    href="https://firebasestorage.googleapis.com/v0/b/ret-tvu.appspot.com/o/RET%2FlogoTVU.png?alt=media&token=f762c35f-c6ee-4836-9661-7bd343c3190d" />
+
+    
     <script src="https://kit.fontawesome.com/5c4aca786f.js" crossorigin="anonymous"></script>
     <title>RET TVU</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- For Google Tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5Z63TE6Y8G"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    gtag('config', 'G-5Z63TE6Y8G');
+  </script>
+
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
